force-app/main/default/objects/Customer_Visit_With_Store_Revenue__c/Customer_Visit_With_Store_Revenue__c.object-meta.xml
<CustomObject>
    <label>Customer Visit With Store Revenue</label>
    <nameField>
        <displayFormat>R-{YYYY}{MM}{0000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Visit With Store Revenues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>