force-app/main/default/objects/Customer_Visit_With_Store_Revenue__c/fields/Customer_Visit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Visit__c</fullName>
    <label>Customer Visit</label>
    <referenceTo>Customer_Visit__c</referenceTo>
    <relationshipLabel>Customer Visit With Store Revenues</relationshipLabel>
    <relationshipName>Customer_Visit_With_Store_Revenues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>