force-app/main/default/objects/Customer_Visit_With_Store_Revenue__c/fields/Growth__c.field-meta.xml
<CustomField>
    <fullName>Growth__c</fullName>
    <formula>IF(( This_Year_Amt__c &lt;&gt;0&amp;&amp; Last_Year_Amt__c &lt;&gt;0), ( This_Year_Amt__c - Last_Year_Amt__c ) / Last_Year_Amt__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Growth %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>