force-app/main/default/objects/Customer_Visit_With_Store_Revenue__c/fields/Growth_value__c.field-meta.xml
<CustomField>
    <fullName>Growth_value__c</fullName>
    <formula>This_Year_Amt__c -  Last_Year_Amt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Growth $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>