force-app/main/default/objects/Customer_Visit_With_Store_Revenue__c/fields/Last_Year_Amt__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The sell out amount of previous year</description>
    <label>Previous Year Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>