force-app/main/default/objects/Customer_Visit_With_Store_Revenue__c/fields/Vs_Store_Performance__c.field-meta.xml
<CustomField>
    <fullName>Vs_Store_Performance__c</fullName>
    <label>Vs Store Performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>